--- a/prep for test - hw4/docker-compose.yml
+++ b/prep for test - hw4/docker-compose.yml
@@ -5,10 +5,10 @@ version: '3.8'
 services:
   # docker run --name weezer-db -d -e MYSQL_ALLOW_EMPTY_PASSWORD=1 -e MYSQL_DATABASE=weezer -e MYSQL_TCP_PORT=3306 -p 3308:3306  deanst/weezer-db:1.0.0
   database:
-    container_name: weezer-db-compose
+    container_name: books-db-compose
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=1
-      - MYSQL_DATABASE=weezer
+      - MYSQL_DATABASE=books
       - MYSQL_TCP_PORT=3306
     ports:
       - "3309:3306"
@@ -22,7 +22,7 @@ services:
       start_period: 30s
   # docker run --name weezer-backend -d -p 3010:3000 -e NODE_ENV=docker deanst/weezer-backend:3.0.0
   backend:
-    container_name: weezer-backend-compose
+    container_name: books-backend-compose
     environment:
       - NODE_ENV=compose
     ports:
@@ -33,7 +33,7 @@ services:
         condition: service_healthy
   # docker run --name weezer-frontend -d -p 3011:5173 shaharsol/weezer-frontend:1.0.1
   frontend:
-    container_name: weezer-frontend-compose
+    container_name: books-frontend-compose
     ports:
       - "3012:80"
     build: 
